--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,33 +1,38 @@
 name: test-action
-on: push
+on:
+  push:
 jobs:
- myJob:
-  runs-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v2
-    - run: pip install
-    
-    - id: sbom
-      uses: AppThreat/cdxgen-action@v1
-      with:
-        output: './reports/bom.xml'
-    - id: saveBom
-      run: |
-        echo -n "$(cat './reports/bom.xml')" > output.xml
-  
-    - run: |
+  myJob:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: pip install
 
-        REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2)
-        TAG_REF=${{ github.ref }}
-        if [[ "$TAG_REF" == "refs/tags/"* ]]; then
-          VERSION=$(echo "$TAG_REF" | sed 's/refs\/tags\///')
-        else
-          VERSION="1.0.0"
-        fi
-        curl -k -X POST "https://dt-api.staging.cryptosoft.com/api/v1/bom" \
-          -H "Content-Type: multipart/form-data" \
-          -H "X-Api-Key:1DMIXAnGtTIeTQDddlHSvpj6d3as174S" \
-          -F "autoCreate=true" \
-          -F "projectName=py28june" \
-          -F "projectVersion=1.1.1" \
-          -F "bom=@output.xml"
+      - name: Generate SBOM
+        id: sbom
+        uses: AppThreat/cdxgen-action@v1
+        with:
+          output: './reports/bom.xml'
+
+      - name: Save SBOM
+        id: saveBom
+        run: |
+          echo -n "${{ steps.sbom.outputs.sbom }}" > output.xml
+
+      - name: Submit SBOM
+        run: |
+          REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2)
+          TAG_REF=${{ github.ref }}
+          if [[ "$TAG_REF" == "refs/tags/"* ]]; then
+            VERSION=$(echo "$TAG_REF" | sed 's/refs\/tags\///')
+          else
+            VERSION="1.0.0"
+          fi
+          curl -k -X POST "https://dt-api.staging.cryptosoft.com/api/v1/bom" \
+            -H "Content-Type: multipart/form-data" \
+            -H "X-Api-Key:1DMIXAnGtTIeTQDddlHSvpj6d3as174S" \
+            -F "autoCreate=true" \
+            -F "projectName=${REPO_NAME}" \
+            -F "projectVersion=${VERSION}" \
+            -F "bom=@output.xml"
