--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -7,7 +7,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
-      - run: poetry install
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          poetry install
 
       - name: Generate SBOM
         id: sbom
