--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -7,10 +7,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
-        run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-          poetry install
-
+        run:  poetry install --no-root
       - name: Generate SBOM
         id: sbom
         uses: AppThreat/cdxgen-action@v1
