--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,6 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Setup Python
+        uses: actions/setup-python@v3.1.4
       - name: Install dependencies
         run:  poetry install --no-root
       - name: Generate SBOM
