--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,8 +8,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v3.1.4
-      - name: Install dependencies
-        run:  poetry install --no-root
+       
+      - name: Install Poetry
+        run: |
+         curl -sSL https://install.python-poetry.org | python3 -
+
+      - name: Install dependencies with Poetry
+        run: poetry install --no-root
       - name: Generate SBOM
         id: sbom
         uses: AppThreat/cdxgen-action@v1
