--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -20,6 +20,9 @@ jobs:
         uses: AppThreat/cdxgen-action@v1
         with:
           output: './reports/bom.xml'
+      - name: Echo Output
+        run: |
+         echo "Output file: ${{ steps.sbom.outputs.output }}"   
 
       - name: Save SBOM
         id: saveBom
@@ -41,4 +44,4 @@ jobs:
             -F "autoCreate=true" \
             -F "projectName=tepy28" \
             -F "projectVersion=1.2.2" \
-            -F "bom=@./reports/bom.xml"
+            -F "bom=output.xml"
