--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -20,9 +20,12 @@ jobs:
         uses: AppThreat/cdxgen-action@v1
         with:
           output: './reports/bom.xml'
-      - name: Echo Output
-        run: |
-         echo "Output file: ${{ steps.sbom.outputs.output }}"   
+      - name: Download Output File
+        uses: actions/download-artifact@v2
+        with:
+         name: output-artifact
+         path: ./reports
+
 
       - name: Save SBOM
         id: saveBom
