--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
          name: output-artifact
-         path: ./reports
+         path: ./reports/bom.xml
 
 
       - name: Save SBOM
