--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -20,19 +20,7 @@ jobs:
         uses: AppThreat/cdxgen-action@v1
         with:
           output: './reports/bom.xml'
-      - name: Publish Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: output-artifact
-          path: ./reports/bom.xml
-
-      - name: Download Output File
-        uses: actions/download-artifact@v2
-        with:
-          name: output-artifact
-          path: ./reports
-
-
+          
       - name: Save SBOM
         id: saveBom
         run: |
@@ -53,4 +41,4 @@ jobs:
             -F "autoCreate=true" \
             -F "projectName=tepy28" \
             -F "projectVersion=1.2.2" \
-            -F "bom=output.xml"
+            -F "bom=@output.xml"
