--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,14 +10,8 @@ jobs:
         uses: actions/setup-python@v3.1.4
        
       - name: Install Poetry
-        run: |
-         curl -sSL https://install.python-poetry.org | python3 -
+        run:  pip install -i
 
-      - name: Install dependencies with Poetry
-        run: poetry install --no-root
-      - name: Capture installed packages
-        run: |
-          poetry export --format requirements.txt --output requirements.txt
       - name: Generate SBOM
         id: sbom
         uses: AppThreat/cdxgen-action@v1
