--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/setup-python@v3.1.4
        
       - name: Install Poetry
-        run:  pip install --extra-index-url
+        run:  pip install poetry
 
       - name: Generate SBOM
         id: sbom
