--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -36,6 +36,6 @@ jobs:
             -H "Content-Type: multipart/form-data" \
             -H "X-Api-Key:1DMIXAnGtTIeTQDddlHSvpj6d3as174S" \
             -F "autoCreate=true" \
-            -F "projectName=py28" \
+            -F "projectName=python37test" \
             -F "projectVersion=1.2.2" \
             -F "bom=@output.xml"
