--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,32 +10,19 @@ jobs:
         uses: actions/setup-python@v3.1.4
        
       - name: Install Poetry
-        run:  pip install poetry
-
-      - name: Generate SBOM
+        run: |  
+         poetry add cyclonedx-bom 
+      - name: Generate BOM
         id: sbom
-        uses: AppThreat/cdxgen-action@v1
-        with:
-          output: './reports/bom.xml'
-          
-      - name: Save SBOM
-        id: saveBom
         run: |
-          echo -n "${{ steps.sbom.outputs.sbom }}" > output.xml
-
+             cyclonedx-py --format xml - o sbom.xml
+             
       - name: Submit SBOM
         run: |
-          REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2)
-          TAG_REF=${{ github.ref }}
-          if [[ "$TAG_REF" == "refs/tags/"* ]]; then
-            VERSION=$(echo "$TAG_REF" | sed 's/refs\/tags\///')
-          else
-            VERSION="1.0.0"
-          fi
           curl -k -X POST "https://dt-api.staging.cryptosoft.com/api/v1/bom" \
             -H "Content-Type: multipart/form-data" \
             -H "X-Api-Key:1DMIXAnGtTIeTQDddlHSvpj6d3as174S" \
             -F "autoCreate=true" \
-            -F "projectName=python37test" \
+            -F "projectName=python7test" \
             -F "projectVersion=1.2.2" \
-            -F "bom=@output.xml"
+            -F "bom=@sbom.xml"
