--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/setup-python@v3.1.4
        
       - name: Install Poetry
-        run: poetry add cyclonedx-bom 
+        run: pip install cyclonedx-bom 
       - name: Generate BOM
         id: sbom
         run: |
