--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/setup-python@v3.1.4
        
       - name: Install Poetry
-        run: pip install poetry cyclonedx-bom 
+        run: pip install poetry
       - name: Install tool
         run:  poetry add cyclonedx-bom 
       - name: Generate BOM
