--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,7 +12,8 @@ jobs:
       - name: Install Poetry
         run: pip install poetry
       - name: Install tool
-        run:  poetry add cyclonedx-bom 
+        run: |
+          poetry add cyclonedx-bom 
       - name: Generate BOM
         id: sbom
         run: |
