--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,12 +8,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v3.1.4
-       
-      - name: Install Poetry
-        run: pip install poetry
       - name: Install tool
-        run: |
-          poetry add cyclonedx-bom 
+        run: poetry add cyclonedx-bom 
       - name: Generate BOM
         id: sbom
         run: |
