--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,11 +9,13 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v3.1.4
       - name: Install tool
+        run: pip install poetry
+      - name: Install tool
         run: pip install cyclonedx-bom 
       - name: Generate BOM
         id: sbom
         run: |
-             cyclonedx-py --format xml - o sbom.xml
+             cyclonedx-py --poetry -i ./ --format xml - o sbom.xml
              
       - name: Submit SBOM
         run: |
