--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           curl -k -X POST "https://dt-api-kkloeckner-llc.staging.cryptosoft.com/api/v1/bom" \
             -H "Content-Type: multipart/form-data" \
-            -H "X-Api-Key:'yx2ZOrANGcuYonKkkeXcOQp77xT2XqvA '" \
+            -H "X-Api-Key:yx2ZOrANGcuYonKkkeXcOQp77xT2XqvA" \
             -F "autoCreate=true" \
             -F "projectName=Testproject3" \
             -F "projectVersion=1.0" \
