--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -21,8 +21,8 @@ jobs:
             -H "Content-Type: multipart/form-data" \
             -H "X-Api-Key:1DMIXAnGtTIeTQDddlHSvpj6d3as174S" \
             -F "autoCreate=true" \
-            -F "projectName=Testjuly111" \
-            -F "projectVersion=1.9.SNAPSHOT" \
+            -F "projectName=Testmultiplecases" \
+            -F "projectVersion=1.9.8" \
             -F "parentName=" \
             -F "parentVersion=" \
             -F "bom=@sbom.xml"
